styles.css
/* Base styles */
body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  margin: 0;
  background-color: #f4f4f9;
  overscroll-behavior: none;
}

#board {
  display: grid;
  grid-template-columns: repeat(33, auto);
  grid-template-rows: repeat(33, auto);
  border: 3px solid #505050;
  overflow: hidden;
  max-width: 100vw; /* Keep within viewport width */
}

.element {
  box-sizing: border-box;
}

.square {
  width: 40px;
  height: 40px;
  background-color: #f8ede3;
  position: relative;
}

.point {
  width: 2px;
  height: 2px;
  background-color: #5050505a;
}

.thin-horizontal {
  width: 100%;
  height: 2px;
  background-color: #5050505a;
  position: relative;
}

.thin-vertical {
  width: 2px;
  height: 100%;
  background-color: #5050505a;
  position: relative;
}

.thick {
  background-color: #505050;
  position: relative;
  box-shadow: 0 0 0 2px #505050;
  z-index: 2;
}

.square.colored::before {
  content: "";
  position: absolute;
  top: -5px;
  left: -5px;
  right: -5px;
  bottom: -5px;
  z-index: 1;
  background-color: transparent;
  pointer-events: auto;
}

.square.highlighted::before {
  content: "";
  position: absolute;
  top: -5px;
  left: -5px;
  right: -5px;
  bottom: -5px;
  z-index: 1;
  background-color: transparent;
  pointer-events: auto;
}

#controls {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#move-counter {
  padding: 10px 20px;
  font-size: 20px;
  font-family: "Arial", sans-serif;
  color: #333;
  text-align: center;
}

.button-group {
  display: flex;
  justify-content: center; /* Center the group within #controls */
  gap: 20px; /* Consistent space between the left and right groups */
}

.groups12,
.groups34 {
  display: flex;
  justify-content: center; /* Center the group within #controls */
  gap: 20px; /* Consistent space between the left and right groups */
}

.group1-buttons,
.group2-buttons,
.group3-buttons,
.group4-buttons {
  display: flex;
  flex-direction: column;
  align-items: center;
}

button {
  width: 150px;
  height: 30px;
  margin-bottom: 10px;
  font-size: 16px;
  font-family: "Arial", sans-serif;
  background-color: #333;
  color: white;
  border: 1px solid #333;
  cursor: pointer;
  border-radius: 5px;
  user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -moz-user-select: none;
}

button:last-child {
  margin-bottom: 0;
}

button:hover {
  background-color: #848282;
}

/* Active/Clicked state for specific buttons */
button.solver-active {
  background-color: #a5dd9b;
  color: #333;
}

button.solver-active:disabled:hover {
  background-color: #a5dd9b;
}

button.solver-active:hover {
  background-color: #c5e8be; /* Different hover effect for active button */
}

button.recording-active {
  background-color: #ff8080; /* Red during recording */
  color: #333;
}

button.recording-active:hover {
  background-color: #fca9a9; /* Red during recording */
}

button:focus,
button:active,
#move-counter:focus {
  outline: none;
  -webkit-tap-highlight-color: transparent; /* Removes blue overlay on iOS */
}

button:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

/* Disable hover effect for disabled buttons */
button:disabled:hover {
  background-color: #333; /* Maintain the original color */
  cursor: not-allowed; /* Show not-allowed cursor */
}

#move-counter {
  user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -moz-user-select: none;
}

.colored {
  position: relative;
  box-shadow: 0 0 0 1px #505050 !important;
}

.circle {
  width: 25px;
  height: 25px;
  background-color: black;
  border-radius: 50%;
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border: 1px solid #505050;
  overflow: hidden;
  pointer-events: none;
}

/* CSS for animating movement */
.moving-square {
  position: absolute;
  transition: transform 0.5s ease-in-out;
  border-radius: 50%;
}

.custom-alert {
  position: fixed;
  top: 43.5%;
  left: 50%;
  width: 250px; /* Adjust width to control text wrapping */
  transform: translate(-50%, -50%);
  font-family: "Arial", sans-serif;
  font-size: 18px;
  background-color: #333;
  color: #fff;
  padding: 1em 2em;
  border-radius: 5px;
  opacity: 1;
  animation: fadeOut 0.5s forwards 1.5s; /* 0.5s duration, 1.5s delay */
  text-align: center;
  z-index: 1000;
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

/* Mobile-friendly adjustments */
@media (max-width: 768px) {
  body {
    justify-content: flex-start; /* Align items to the top */
    min-height: auto; /* Remove full viewport height to avoid extra vertical space */
  }

  #board {
    width: calc(100vmin - 4px); /* Ensures the board is square */
    height: calc(100vmin - 4px);
    margin: 20px 2px 0px;
    border: 1px solid #505050;
    padding: env(safe-area-inset-top); /* Adjust padding for safe areas */
  }

  .square {
    width: calc((100vmin - 21px) / 16); /* Adjusts dynamically for 16 squares */
    height: calc((100vmin - 21px) / 16);
    box-sizing: border-box; /* Includes padding and border in width/height */
  }

  .point {
    width: 1px;
    height: 1px;
  }
  .thin-horizontal {
    height: 1px;
  }

  .thin-vertical {
    width: 1px;
  }

  .thick {
    box-shadow: 0 0 0 1px #505050;
  }

  .button {
    width: 135px;
    height: 30px;
    margin-bottom: 10px;
    font-size: 14px;
  }

  .button-group {
    flex-direction: column;
  }

  button:hover {
    background-color: #333; /* Disable hover color for mobile */
  }

  button:active {
    background-color: #848282; /* Apply hover color only while pressing */
  }

  /* Smaller font and padding for the move counter */
  #move-counter {
    font-size: 16px;
    padding: 5px 15px;
    margin: 20px;
  }

  .circle {
    width: 13px;
    height: 13px;
  }

  .custom-alert {
    top: 24.5%; /* Moves the alert further up on smaller screens */
  }
}

